[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sk-neuro"
version = "0.1.0"
description = "Scikit-learn–style machine learning wrappers for neuroimaging prediction."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Zhipeng Cao", email = "zhipeng30@foxmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "pandas",
  "matplotlib",
  "seaborn",
  "joblib",
  "shap",
  "glmnet",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skneuro*"]

[project.urls]
Homepage = "https://github.com/zh1peng/sk-neuro"
Documentation = "https://github.com/zh1peng/sk-neuro#readme"
Source = "https://github.com/zh1peng/sk-neuro"
Issues = "https://github.com/zh1peng/sk-neuro/issues"
