[metadata]
name = sk-neuro
version = 0.1.0
description = Scikit-learn–style machine learning wrappers for neuroimaging prediction
long_description = file: README.md
long_description_content_type = text/markdown
author = Zhipeng Cao
author_email = zhipeng30@foxmail.com
license = MIT
url = https://github.com/zh1peng/sk-neuro
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    scikit-learn
    pandas
    matplotlib
    seaborn
    joblib
    shap
    glmnet
